# NovaOS-Core-Systems

./: .codexrc.md  .dockerignore  .env.blackrose.example  .env.core.example  .env.echo.example  .env.example  .env.gypsycove.example  .env.production.example  .gitignore  .local_sync_gitignore  .npmrc  ACCELERATED_DEVELOPMENT_STRATEGY.md  AGENT_ANALYSIS_REPORT.md  AGENT_IMPLEMENTATION_GUIDE.md  AGENT_SPEC.md  APPS.md  AUDIT_SYSTEM_DOCUMENTATION.md  AUDIT_SYSTEM_IMPLEMENTATION_SUMMARY.md  AUTHENTICATION_SECURITY_RESOLUTION_REPORT.md  CHAT_INFRASTRUCTURE_AUDIT.md  CONSOLIDATED_INSTRUCTIONS.md  CONTRIBUTING.md  ChatWidget_final.tsx  ChatWidget_fixed.tsx  DEMO_DATA_STRATEGY.md  DEPLOY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS_REPORT.md  DEPLOY_NOW.sh  DNS_CONFIGURATION.md  EMAIL_SYSTEM_SETUP.md  ENHANCED_GODMODE_IMPLEMENTATION.md  LICENSE  LOCAL_ACCESS_GUIDE.md  MASTER_PALETTE_IMPLEMENTATION.md  MODELS.md  Makefile  NSFW_COMPLIANCE_IMPLEMENTATION.md  NSFW_CONSENT_IMPLEMENTATION.md  NovaOS-Core-Systems.code-workspace  (+107 more)
.github/: copilot-instructions.md
.github/workflows/: build-agents.yml  ci.yml  core-api-deploy.yml  core-api.yml  deploy-platforms.yml  fetch-models.yml  publish-agents.yml
.sbom/: .gitkeep  project-sbom.json
agents/: __init__.py  base.py  requirements.in
ai_models/: .modelmap.json  MODELS.md  README.md
core/: __init__.py  registry.py
design/: PaletteMap.md
directives/: core.json
docs/: AGENTS.md  AUDIT_REPORT.md  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT_MAC.md  GODMODE_FEATURES.md  PALETTES.md  PLATFORMS.md  ROLES.md  SECURITY_FORENSICS_REPORT.md  SUPPLY_CHAIN_VERIFICATION.md  TIERS.md  UI_Element_Inventory.md
env/: __init__.py  config.json  identity.py
scripts/: audit.sh  backup.sh  db_init.sql  db_seed.sql  deploy_enhanced_godmode.sh  dev.ps1  dev.sh  e2e.sh  fetch_models.py  forensics.sh  healthcheck.py  install_forensics_tools.ps1  install_forensics_tools.py  palette_sync.mjs  run-agent.sh  run_agent_runtime.py  run_with_heartbeat.py  setup_llm.sh  tutor.sh  wait-for-db-and-start.sh
services/: __init__.py
services/core-api/: .env.example  Dockerfile  alembic.ini  dev.sh  entrypoint.sh  main.py  package.json  pyproject.toml  state.py  tasks.py
services/core-api/alembic/: env.py  script.py.mako
services/core-api/alembic/versions/: 001_init.py  003_agents_registry.py  004_platform_flags.py  005_audit_system.py  006_payment_system.py  20240816_000001_roles_tiers_palettes.py  20240816_000002_update_crypto_flag.py
services/core-api/app/: config.py  deps.py  main.py  payments.py
services/core-api/app/api/v1/: agent.py
services/core-api/app/db/: base.py
services/core-api/app/db/models/: __init__.py  agents.py  analytics_events.py  audit.py  consents.py  creator_productivity.py  dmca_reports.py  events.py  messages.py  palettes.py  payments.py  platform_flags.py  purchases.py  roles.py  rooms.py  tiers.py  users.py
services/core-api/app/middleware/: audit.py  csrf.py  rate_limit.py  rbac.py  request_id.py
services/core-api/app/models/: file_upload.py  password_reset.py  vault.py
services/core-api/app/performance/: cdn_system.py  implementation_validation.py  integration.py  optimizer.py  performance_optimization_validation_20250919_221519.json  rate_limiter.py  testing_suite.py  validate_performance.py
services/core-api/app/routes/: __init__.py  agents.py  analytics.py  auth.py  compliance.py  consent.py  dmca.py  draft_posts.py  internal.py  llm.py  logs.py  messages.py  palettes.py  password_reset.py  payments.py  platform.py  profile.py  rooms.py  scheduled_posts.py  stripe_integration.py  stripe_payments.py  system_audit.py  uploads.py  vault.py  vault_bundles.py
services/core-api/app/schemas/: agent.py  command.py  logs.py
services/core-api/app/security/: csrf.py  jwt.py  passwords.py  policy_enforcer.py
services/core-api/app/services/: email_service.py  file_upload.py  stripe_service.py
services/core-api/legal/: README.md  community-guidelines.md  dmca-policy.md  privacy-policy.md  terms-of-service.md
services/core-api/payments/: base.py  crypto_btcpay.py  stripe.py
services/core-api/scripts/: db_seed.sql
services/core-api/tests/: conftest.py  test_agents_rbac.py  test_auth.py  test_consents_dmca.py  test_core_api.py  test_csrf.py  test_internal_messages.py  test_palettes.py  test_rate_limit.py  test_rooms_messages.py  test_security.py
services/echo/: Dockerfile  main.py  package.json  pyproject.toml
services/echo/app/: auth.py  deps.py  main.py  rooms.py  schemas.py  ws.py
services/echo/tests/: conftest.py  test_echo.py
tools/: bootstrap.sh  run-agent.sh
(+272 files in other folders)
