# services/echo/pyproject.toml

[project]
name = "echo"
version = "0.1.0"
requires-python = ">=3.11"

# Runtime deps aligned with echo/app/{auth,deps}.py
dependencies = [
  "fastapi>=0.116,<0.117",
  "uvicorn[standard]>=0.35,<0.36",
  "redis[hiredis]>=5.0.4,<6",
  "httpx>=0.27,<0.28",
  "PyJWT>=2.9,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9",
  "pytest-asyncio>=0.23.5,<0.24",
  "anyio>=4.4,<5",
  "fakeredis>=2.23,<3",
  "types-redis>=4.6,<5",
]

# Optional but handy: if you build wheels/sdists later
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Test runner config (keeps asyncio tests simple)
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
